# ham-lab

./: .gitignore  README.md  testgit.odt  token3.txt
Automated-Grinding/JDH/jdh_ws_cx/devel/: local_setup.sh
Automated-Grinding/JDH/jdh_ws_cx/src/khi_cx110l_moveit_config/: CMakeLists.txt
Automated-Grinding/JDH/jdh_ws_cx/src/khi_cx165l_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Automated-Grinding/JDH/jdh_ws_cx/src/khi_cx_gazebo/: CMakeLists.txt
Automated-Grinding/JDH/jdh_ws_cx/src/khi_robot/: package.xml
Automated-Grinding/WWG/wwg_scan_ws/devel/: .catkin
Automated-Grinding/WWG/wwg_scan_ws/src/khi_cx110l_description/: CMakeLists.txt
Automated-Grinding/WWG/wwg_scan_ws/src/khi_cx110l_moveit_config/: package.xml
Automated-Grinding/WWG/wwg_scan_ws/src/khi_cx165l_description/: CMakeLists.txt  package.xml
Automated-Grinding/WWG/wwg_scan_ws/src/khi_cx165l_moveit_config/: .setup_assistant
Automated-Grinding/WWG/wwg_scan_ws/src/wwg-scan/: CMakeLists.txt  package.xml
Automated-Grinding/WWG/wwg_scan_ws/src/wwg-scan/scripts/: pointcloud_gui.py  pointcloud_to_csv.py
Hybrid-Testbed/Open Loop Control/KAW- Control/: README.md
Hybrid-Testbed/Open Loop Control/KAW- Control/Electrical_Docs/: KAW II EEF Panel.drawio
Hybrid-Testbed/Open Loop Control/KAW- Control/Fusion_Post_Processor/: .txt  2023-11-15 simple.cps
Hybrid-Testbed/Open Loop Control/KAW- Control/Process_Flowcharts/: FFF_Process.drawio  processes.txt
Hybrid-Testbed/ROS Implementation/jdh_ws_cx/devel/: .catkin  .rosinstall
Hybrid-Testbed/ROS Implementation/jdh_ws_cx/src/khi_cx_description/: CMakeLists.txt  package.xml
Hybrid-Testbed/ROS Implementation/jdh_ws_cx/src/khi_cx_description/meshes/: CX165L-BC01_J4.STL  CX165L-BC01_J6.STL  CX165L-J4.STL  CX165L-J6.STL
Hybrid-Testbed/ROS Implementation/jdh_ws_cx/src/khi_cx_description/urdf/: common.gazebo.xacro  cx165l_macro.xacro
Hybrid-Testbed/ROS Implementation/khi_control/devel/: .catkin  .rosinstall
Tool_Path_Generator/: Tool Path Visualizer.py  line generator gen5.2.py  pcd visualizer.py
Tool_Path_Generator/Surface Generators/: 8 edge curved surface generator.py  8 sided surface pcd generator.py  Generate surface with varying edges.py  generate flat point cloud.py  point cloud generator.py  point cloud visualizer.py  point cloud with bump generator.py  surface about y axis generator.py  tilted point cloud surface generator.py
Tool_Path_Generator/Surface Point Clouds/: 8_sided_curved_surface_rotated.txt  chosen_edges.txt  flat_surface.txt  gently_curved_surface.txt  half_cylindrical_surface_4x1.txt  point_cloud_with_blob.txt
Tool_Path_Generator/gen4/: 8_sided_curved_surface.txt  line generator gen4.1.py  line generator gen4.2.py  line generator gen4.3.py  line generator gen4.py  point_cloud_data.txt
Tool_Path_Generator/gen5/: line generator gen5.1.py
khi_control/devel/include/khi_robot_msgs/: KhiRobotCmd.h  KhiRobotCmdResponse.h
khi_control/devel/lib/pkgconfig/: khi_cx110l_description.pc  khi_cx110l_moveit_config.pc  khi_cx165l_moveit_config.pc  khi_cx_gazebo.pc  khi_duaro_description.pc  khi_duaro_ikfast_plugin.pc  khi_robot_test.pc  khi_rs007n_moveit_config.pc  khi_rs_description.pc  khi_rs_ikfast_plugin.pc
khi_control/src/khi_robot/khi_cx110l_description/: package.xml
(+273 files in other folders)
