<?xml version="1.0"?>
<package format="2">
  <name>khi_cx_description</name>
  <version>0.0.0</version>
  <description>The khi_cx_description package</description>

  <maintainer email="landongetting@gmail.com">Landon Getting</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
